Add Django 2 support

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ include_package_data = True
 packages = find:
 
 [options.extras_require]
-shuup = shuup>=1.7.3,<2
+shuup = shuup>2,<3
 
 [options.entry_points]
 shuup.addon = shuup_category_organizer = shuup_category_organizer
