--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,8 +1,8 @@
 beautifulsoup4==4.5.3
-pytest>=3.6
+pytest==5.4.1
 pytest-cov
-pytest-django>=3.0.0
-pytest-sugar
-flake8>=3.3.0
-isort>=4.2.5
+pytest-django==3.8.0
+pytest-sugar==0.9.4
+flake8>3,<4
+isort>4.3,<5
 -e .
