--- a/shuup_category_organizer/package.json
+++ b/shuup_category_organizer/package.json
@@ -20,16 +20,16 @@
     "homepage": "https://github.com/shuup/shuup-category-organizer",
     "private": true,
     "dependencies": {
-        "autoprefixer": "^8.6.4",
+        "autoprefixer": "^9.6.1",
         "babel-core": "^6.26.3",
         "babel-preset-env": "^1.7.0",
         "lodash.debounce": "^4.0.8",
-        "parcel-bundler": "^1.10.3",
-        "postcss-modules": "^1.1.0",
-        "sass": "^1.15.1",
-        "shuup-static-build-tools": "^1.0.2"
+        "parcel-bundler": "^1.12.4",
+        "postcss-modules": "^1.4.1",
+        "sass": "^1.17.3",
+        "shuup-static-build-tools": "^1.0.3"
     },
-    "browsertlist": [
+    "browserslist": [
         "> 1%",
         "last 5 versions"
     ]
