--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = shuup-category-organizer
-version = 1.0.0.post+gitver
+version = 1.0.1
 description = Shuup Category Organizer
 long_description = file: README.rst
 keywords = shuup,category,extra
